@@ -1,12 +1,39 @@
 use ExtUtils::MakeMaker;
-# See lib/ExtUtils/MakeMaker.pm for details of how to influence
-# the contents of the Makefile that is written.
+
+sub MY::metafile {
+  package MY;
+  my $self = shift;
+  if (!eval { require YAML; 1 })
+  {
+    warn ("YAML not installed, 'make dist' will not override META.yml");
+    return $self->SUPER::metafile_target(@_);
+  };
+
+  my $node = new YAML::Node {};
+
+  $node->{name}			= $self->{DISTNAME};
+  $node->{version}		= $self->{VERSION};
+  $node->{version_from}		= $self->{VERSION_FROM};
+  $node->{license}		= 'perl';
+  $node->{distribution_type}	= 'module';
+  $node->{generated_by}		= "$self->{DISTNAME} version $self->{VERSION}";
+  $node->{installdirs}		= 'site';
+  $node->{requires}		= $self->{PREREQ_PM};
+
+  my $dump = YAML::Dump( $node );
+
+  $dump =~ s/^(.*)$/\t\$(NOECHO) \$(ECHO) "$1" >>META.yml/gm;
+  $dump =~ s/>>META\.yml/>META.yml/;
+
+  return "metafile:\n$dump";
+}
+
 WriteMakefile(
     'NAME'		=> 'Math::BigInt::FastCalc',
     'VERSION_FROM'	=> 'lib/Math/BigInt/FastCalc.pm', # finds $VERSION
     'PREREQ_PM'		=> {
-	Math::BigInt => 1.72,
-      }, # e.g., Module::Name => 1.1
+	Math::BigInt => 1.74,
+      },
     'LIBS'		=> [''], 	# e.g., '-lm'
     'DEFINE'		=> '', 		# e.g., '-DHAVE_SOMETHING'
 	# Insert -I. if you add *.h files later:
